--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
+    "csv-loader": "^3.0.3",
     "custom-electron-titlebar": "^4.1.0",
     "electron": "^19.0.1",
     "electron-builder": "^23.0.3",
     "electron-reload": "^2.0.0-alpha.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.0",
     "sass": "^1.52.1",
