--- a/package.json
+++ b/package.json
@@ -1,41 +1,45 @@
 {
-  "name": "diplom",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron .",
-    "watch": "cross-env NODE_ENV=production webpack --config webpack.config.js --watch",
-    "dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
-    "prod": "cross-env NODE_ENV=production webpack --config webpack.config.js"
-  },
-  "keywords": [],
-  "author": "Papushev Alexandr <alepap2311@yandex.ru>",
-  "license": "ISC",
-  "dependencies": {
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.18.2",
-    "@babel/preset-env": "^7.18.2",
-    "@babel/preset-react": "^7.17.12",
-    "babel-loader": "^8.2.5",
-    "clean-webpack-plugin": "^4.0.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
-    "csv-loader": "^3.0.3",
-    "custom-electron-titlebar": "^4.1.0",
-    "electron": "^19.0.1",
-    "electron-builder": "^23.0.3",
-    "electron-reload": "^2.0.0-alpha.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "sass": "^1.52.1",
-    "sass-loader": "^13.0.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
-  }
+    "name": "diplom",
+    "version": "1.0.0",
+    "description": "",
+    "main": "main.js",
+    "scripts": {
+        "start": "electron .",
+        "watch": "cross-env NODE_ENV=production webpack --config webpack.config.js --watch",
+        "dev": "cross-env NODE_ENV=development webpack --config webpack.config.js",
+        "prod": "cross-env NODE_ENV=production webpack --config webpack.config.js"
+    },
+    "keywords": [],
+    "author": "Papushev Alexandr <alepap2311@yandex.ru>",
+    "license": "ISC",
+    "dependencies": {
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.18.2",
+        "@babel/preset-env": "^7.18.2",
+        "@babel/preset-react": "^7.17.12",
+        "babel-loader": "^8.2.5",
+        "clean-webpack-plugin": "^4.0.0",
+        "cross-env": "^7.0.3",
+        "css-loader": "^6.7.1",
+        "csv-loader": "^3.0.3",
+        "custom-electron-titlebar": "^4.1.0",
+        "electron": "^19.0.1",
+        "electron-builder": "^23.0.3",
+        "electron-reload": "^2.0.0-alpha.1",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.5.0",
+        "mini-css-extract-plugin": "^2.6.0",
+        "react-data-grid": "^7.0.0-beta.13",
+        "react-data-table-component": "^7.5.2",
+        "react-router-dom": "^6.3.0",
+        "sass": "^1.52.1",
+        "sass-loader": "^13.0.0",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.72.1",
+        "webpack-cli": "^4.9.2",
+        "xlsx": "^0.18.5"
+    }
 }
